--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,35 @@
 asgiref==3.3.1
+cachetools==4.2.1
+certifi==2020.12.5
+chardet==4.0.0
+dj-database-url==0.5.0
 Django==3.1.7
+django-appconf==1.0.4
+django-googledrive-storage==1.5.2
 django-nested-admin==3.3.3
+django-nested-inlines==0.1
 djangorestframework==3.12.2
+google-api-core==1.26.1
+google-api-python-client==2.0.2
+google-auth==1.28.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.53.0
+httplib2==0.19.0
+idna==2.10
+oauth2client==4.1.3
+packaging==20.9
+protobuf==3.15.6
 psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+python-dateutil==2.8.1
 python-monkey-business==1.0.0
 pytz==2021.1
+requests==2.25.1
+rsa==4.7.2
 six==1.15.0
 sqlparse==0.4.1
+uritemplate==3.0.1
+urllib3==1.26.4
+whitenoise==5.2.0
