--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,16 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-big-calendar": "^0.33.2",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-icons": "^1.4.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-schedule-calendar": "^0.22.8",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
