--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.3.1
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
+coreapi==2.3.3
+coreschema==0.0.4
 dj-database-url==0.5.0
 Django==3.1.7
 django-appconf==1.0.4
@@ -9,14 +11,21 @@ django-googledrive-storage==1.5.2
 django-nested-admin==3.3.3
 django-nested-inlines==0.1
 djangorestframework==3.12.2
+drf-yasg==1.20.0
 google-api-core==1.26.1
 google-api-python-client==2.0.2
 google-auth==1.28.0
 google-auth-httplib2==0.1.0
 googleapis-common-protos==1.53.0
 httplib2==0.19.0
+httplib2shim==0.0.3
 idna==2.10
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
 oauth2client==4.1.3
+openapi-codec==1.3.2
 packaging==20.9
 protobuf==3.15.6
 psycopg2-binary==2.8.6
@@ -28,10 +37,11 @@ python-monkey-business==1.0.0
 pytz==2021.1
 requests==2.25.1
 rsa==4.7.2
+ruamel.yaml==0.17.4
+ruamel.yaml.clib==0.2.2
+simplejson==3.17.2
 six==1.15.0
 sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.4
 whitenoise==5.2.0
-
-httplib2shim~=0.0.3
