--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ numpy==1.20.2
 oauth2client==4.1.3
 openapi-codec==1.3.2
 packaging==20.9
+Pillow==8.2.0
 protobuf==3.15.6
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
