--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap-icons": "^1.4.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
+    "react-moment": "^1.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-schedule-calendar": "^0.22.8",
