--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@nivo/core": "^0.70.0",
+    "@nivo/line": "^0.70.0",
     "@nivo/radar": "^0.70.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
