--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.0",
+    "emoji-picker-react": "^3.4.6",
     "moment": "^2.29.1",
     "nivo": "^0.31.0",
     "react": "^17.0.1",
