--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap-icons": "^1.4.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-moment": "^1.1.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
